# mtg-printable-set-label-generator

./: .editorconfig  .gitignore  CONTRIBUTION.md  LICENSE  MANIFEST.in  README.md  label-generator.py  mtglabels.py  requirements.txt  setup.cfg  setup.py
mtglabels/: __init__.py  generator.py  pdftest.py
mtglabels/config/: defaults.py  pdf_templates.py  process_csv.py  utils.py
mtglabels/resources/csv_templates/: lions_eye.csv  lions_eye_extended.csv  moxfield.csv
