[metadata]
name = mtglabels
version = 1.0.0

[options]
packages = mtglabels
include_package_data = True
install_requires =
    requests>=2.22.0,<3
    CairoSVG>=2.7.1,<3
    fpdf2>=2.7.7,<3
    pandas>=2.1.4,<3
    pillow>=10.2.0,<11
    requests>=2.31.0,<3
    urllib3>=2.1.0,<3

[options.entry_points]
console_scripts =
    mtglabels = mtglabels.generator:main
